--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body ng-controller="MainController">
-    
-    {{thisAppIsBroken}}
-    
+    <div ng-repeat='user in users' ng-class="{favorite: user.isFavorite}">
+        <span>First Name: </span><p>{{user.first_name}}</p>
+        <span>Last Name: </span><p>{{user.last_name}}</p>
+        <span>Avatar: </span><img ng-src="{{user.avatar}}">
+        <button type="button" ng-click="toggleFavorite(user.id)">Favorite Me</button>
+    </div>
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
      <script src="app.js"></script>
      <script src="controller.js"></script>
+     <script src="service.js"></script>
 </body>
 </html>
